Show runs parameters in context area (#13)
